sonar-k8s-simple-full/k8s/base/10-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-k8s-demo
  namespace: __NAMESPACE__
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sonar-k8s-demo
  template:
    metadata:
      labels:
        app: sonar-k8s-demo
    spec:
      containers:
        - name: app
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
