sonar-k8s-simple-full/k8s/base/04-sonarqube-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgres
  namespace: sonarqube
spec:
  selector:
    app: sonarqube-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
