sonar-k8s-simple-full/k8s/base/11-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-k8s-demo
  namespace: __NAMESPACE__
spec:
  selector:
    app: sonar-k8s-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
